--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   },
   "homepage": "https://github.com/zinkyawkyaw/mm-exchange-rate#readme",
   "devDependencies": {
-    "axios": "^0.19.0",
-    "moment": "^2.24.0"
+    "axios": "^0.19.0"
   }
 }
